# yakrover-8004-mcp

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
deploy/fly/berlin-tumbller/: fly.toml
docs/: BIDDING_MARKETPLACE_PLAN.md  CHANGELOG.md  DEVELOPMENT.md  MODULAR_FRAMEWORK_PLAN.md
scripts/: discover.py  fix_metadata.py  generate_wallet.py  register.py  serve.py  update_agent.py
setup/: opencode.ps1  opencode.sh
src/auction/: engine.py  mcp_tools.py  models.py  payments.py  webhooks.py
src/core/: chains.py  discovery.py  marketplace_tools.py  plugin.py  registration.py  server.py  tunnel.py  wallet.py
src/robots/: __init__.py
src/robots/_template/: __init__.py  client.py  tools.py
src/robots/berlin_tumbller/: __init__.py  audit.py  availability.json  availability.py  client.py  pricing.py  rate_limit.py  tools.py
src/robots/fakerover/: __init__.py  client.py  simulator.py  tools.py
src/robots/tello/: __init__.py  client.py  tools.py
src/robots/tumbller/: __init__.py  client.py  tools.py
tests/: conftest.py  test_berlin_tumbller.py
