[project]
name = "yakrover-8004-mcp"
version = "0.1.0"
description = "Modular MCP framework for multi-robot fleet control and discovery"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "agent0-sdk>=1.5.2",
    "fastmcp>=2.14.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pyngrok>=7.5.0",
    "python-dotenv>=1.2.1",
    "web3>=7.14.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
tumbller = ["httpx>=0.28.1"]
tello = ["djitellopy>=2.5.0"]
fakerover = ["httpx>=0.28.1"]
all = ["httpx>=0.28.1", "djitellopy>=2.5.0"]

[tool.uv]
prerelease = "allow"
